--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/nicolilo11/Repaso-fundamentos-4/issues"
   },
-  "homepage": "https://github.com/nicolilo11/Repaso-fundamentos-4#readme"
+  "homepage": "https://github.com/nicolilo11/Repaso-fundamentos-4#readme",
+  "devDependencies": {
+    "@types/node": "^16.4.0"
+  }
 }
